@@ -11,6 +11,7 @@
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>21</java.version>
   </properties>
 
 
@@ -48,10 +49,12 @@
     </dependency>
 
 
+    <!-- Lombok для генерации кода в IDE и на сборке -->
     <dependency>
-      <groupId>org.example</groupId>
-      <artifactId>TG_BOT_PRAKTIKA_18_05_25</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.38</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
@@ -64,11 +67,12 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
       <version>3.5.0</version>
     </dependency>
+    <!-- Аннотационный процессор Lombok для Maven-сборки -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <scope>annotationProcessor</scope>
       <version>1.18.38</version>
+      <scope>annotationProcessor</scope>
     </dependency>
 
   </dependencies>
@@ -77,11 +81,15 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
         <configuration>
-          <source>24</source>
-          <target>24</target>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <release>${java.version}</release>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>3.5.0</version>
       </plugin>
     </plugins>
   </build>
